added missing data exploration for full dataset, using pickling to store results

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .vscode
-data/COVID-19_Case_Surveillance_Public_Use_Data_with_Geography_20241111.csv
+data/COVID-19_Case_Surveillance_Public_Use_Data_with_Geography_20241201.csv
+data/covid_geo_full_dataset.pkl
